[package]
name = "rust-websockets-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.29"
tokio = { version = "1.35.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
